--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,26 +1,10 @@
-<% provide(:title, "Edit user") %>
+<% provide(:title, 'Edit user') %>
+<% provide(:button_text, 'Save changes') %>
 <h1>Update your profile</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_with(model: @user) do |f| %>
-      <%= render 'shared/error_messages' %>
-
-      <%= f.label :name %>
-      <%= f.text_field :name, class: 'form-control' %>
-
-      <%= f.label :email %>
-      <%= f.email_field :email, class: 'form-control' %>
-
-      <%= f.label :password %>
-      <%= f.password_field :password, class: 'form-control' %>
-
-      <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :password_confirmation, class: 'form-control' %>
-
-      <%= f.submit "Save changes", class: "btn btn-primary" %>
-    <% end %>
-
+    <%= render 'form' %>
     <div class="gravatar_edit">
       <%= gravatar_for @user %>
       <%# target="_blank"を使うとリンクをクリックしたときに新しいタブ（またはウィンドウ）で開くようになる。ただし、古いブラウザでリンク先のサイトがHTMLドキュメントのwindowオブジェクトを扱えてしまう問題があるためrel="noopener"も追加 %>
