--- a/app/views/user_mailer/account_activation.text.erb
+++ b/app/views/user_mailer/account_activation.text.erb
@@ -1,5 +1,5 @@
-はじめまして<%= @user.name %>さん
+Hi <%= @user.name %>,
 
-Sample Appへようこそ! アカウント有効化のためにリンクをクリックしてください。
+Welcome to the Sample App! Click on the link below to activate your account:
 
 <%= edit_account_activation_url(@user.activation_token, email: @user.email) %>
