--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -4,4 +4,7 @@
     <%= f.text_area :content, placeholder: "新しいマイクロポストをつくってみよう" %>
   </div>
   <%= f.submit "Post", class: "btn btn-primary" %>
+  <span class="image">
+    <%= f.file_field :image %>
+  </span>
 <% end %>
